--- a/member-profiles/Jamie.html
+++ b/member-profiles/Jamie.html
@@ -4,20 +4,103 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stage Fright</title>
-    <link rel="stylesheet" href="../profiles.css"/>
+    <!-- <link rel="stylesheet" href="../profiles.css"/> -->
+     <style>
+        body {
+            background-color: black;
+            /* color: white; */
+        }
+
+        .flexbox {
+            display: flex;
+        }
+
+        img {
+            height: 200px;
+            width: 200px;
+            margin-bottom: 10px;
+        }
+
+        div > .images, .text{
+            /* background-color: rgb(237, 237, 237); */
+            /* background-color: rgb(104, 101, 101); */
+            /* background-color: rgb(117, 109, 103); */
+            background-color: rgb(186, 175, 167);
+
+
+        }
+
+        .images {
+            width: 200px;
+            padding: 20px 20px 10px 20px;
+            margin: 20px;
+        }
+
+        .text {
+            padding: 20px;
+            padding-top: 0px;
+            margin: 20px;
+            height: 660px;
+        }
+
+        span {
+            font-size: 2rem;
+            font-weight: bold;
+            /* font-style: italic; */
+        }
+
+        @media (max-width: 805px) {
+            .flexbox {
+                flex-direction: column;
+            }
+
+            img {
+                height: 100px;
+                width: 100px; 
+                margin-bottom: 0px;
+            }
+
+            .images {
+                display: flex;
+                padding: 20px 20px 15px 20px;
+                width: auto;
+                margin: auto;
+            }
+
+            .row {
+                flex: 33.33%;
+                padding: 5px;
+            }
+
+            .text {
+                height: auto;
+            }
+        }
+
+
+     </style>
 
 </head>
 <body>
-    <img src="../assets/images/members/Jamie 1.jpg" alt="Young Jamie looking into the bustling streets of New York"/>
-    <p>Jamie Smith, the guitarist of Stage Fright, grew up in the bustling city of New York City, a place where the streets hum with the sounds of both struggle and creativity. He had always been drawn to the various sounds of daily life and frequently spent his afternoons sitting on the sidewalks of Lower Manhattan. At 12 years old, he discovered his father's dusty, old acoustic guitar hidden in a closet. The first strum of the guitar let out the most melodic tune Jamie had ever heard. For the next few months, Jamie would save his allowance, and when he had enough, he bought an old electric guitar. Jamie would spend hours on end teaching himself by listening to various albums. He gained a liking to classic rock bands and began replicating various guitar riffs that he liked. He quickly developed an ear for complex melodies and could mimic solos after just a few listens. During his teenage years, Jamie became known in New York’s underground music scene for his explosive guitar solos and unrelenting passion. While he had technical talent, his real gift lay in his ability to make his guitar sing, capturing emotions in his playing that words couldn’t express.
-    </p>
+    <div class="flexbox">
+        <div class="images">
+            <div class="row"><img src="../assets/images/members/Jamie 1.jpg" alt="Young Jamie looking into the bustling streets of New York"/></div>
+            <div class="row"><img src="../assets/images/members/Jamie 2.jpg" alt="Young Jamie discovering a guitar in his father's closet"/></div>
+            <div class="row"><img src="../assets/images/members/Jamie 3.jpg" alt="Teenage Jamie playing the electric guitar"/></div>
+        </div>
 
-    <img src="../assets/images/members/Jamie 2.jpg" alt="Young Jamie discovering a guitar in his father's closet"/>
-    <p>With each album, Jamie’s guitar playing evolved, becoming more layered and complex as he explored new sounds and experimented with different techniques. His emotional depth became a defining feature of the band’s music—whether it was the aching solos that accompanied Alex’s introspective lyrics or the explosive riffs that punctuated the band’s more energetic tracks.
-    </p>
+        <div class="text">
+            <p><span>Jamie Smith</span>, the guitarist of Stage Fright, grew up in the bustling city of New York City, a place where the streets hum with the sounds of both struggle and creativity. He had always been drawn to the various sounds of daily life and frequently spent his afternoons sitting on the sidewalks of Lower Manhattan. At 12 years old, he discovered his father's dusty, old acoustic guitar hidden in a closet. The first strum of the guitar let out the most melodic tune Jamie had ever heard. For the next few months, Jamie would save his allowance, and when he had enough, he bought an old electric guitar. Jamie would spend hours on end teaching himself by listening to various albums. He gained a liking to classic rock bands and began replicating various guitar riffs that he liked. He quickly developed an ear for complex melodies and could mimic solos after just a few listens. During his teenage years, Jamie became known in New York’s underground music scene for his explosive guitar solos and unrelenting passion. While he had technical talent, his real gift lay in his ability to make his guitar sing, capturing emotions in his playing that words couldn’t express.
+            </p>
 
-    <img src="../assets/images/members/Jamie 3.jpg" alt="Teenage Jamie playing the electric guitar"/>
-    <p>Now, as a key member of Stage Fright, Jamie has found his own balance between the stage and the shadows. His guitar is no longer just an instrument—it's a means of self-expression and a way to connect with the audience on a deeper level. Jamie Smith, with his weathered fingers and raw, emotive riffs, has become an irreplaceable part of Stage Fright’s sound, capturing the highs and lows of life through the strings of his guitar.
-    </p>
+            <p>With each album, Jamie’s guitar playing evolved, becoming more layered and complex as he explored new sounds and experimented with different techniques. His emotional depth became a defining feature of the band’s music—whether it was the aching solos that accompanied Alex’s introspective lyrics or the explosive riffs that punctuated the band’s more energetic tracks.
+            </p>
+
+            <p>Now, as a key member of Stage Fright, Jamie has found his own balance between the stage and the shadows. His guitar is no longer just an instrument—it's a means of self-expression and a way to connect with the audience on a deeper level. Jamie Smith, with his weathered fingers and raw, emotive riffs, has become an irreplaceable part of Stage Fright’s sound, capturing the highs and lows of life through the strings of his guitar.
+            </p>
+        </div>
+    </div>
+
+
 </body>
 </html>
