updated nav bar got more logos tried to do somethong woth the contact  but couldnt work

--- a/Merch.html
+++ b/Merch.html
@@ -14,19 +14,24 @@
 <body>
     <!-- Navbar -->
     <div class="navbar">
+        <div class="nav-logo">
+            <a href="./index.html">
+                <img src="logo1.png" alt="Stage Fright Logo" class="logo">
+            </a>
+        </div>
         <div class="nav-links">
             <a href="./index.html">Home</a>
             <a href="./Tour.html">Tour</a>
             <a href="./Merch.html">Merch</a>
             <a href="./About.html">About</a>
-            <a href="./Contact.html">Contact</a>
+            <a href="./index.html#contact-container">Contact</a>
         </div>
+        
         <div class="cart-icon" onclick="toggleCart()">
             <i class="fas fa-shopping-cart"></i>
             <span id="cartCount" class="cart-badge">0</span>
         </div>
     </div>
-
     <!-- Cart Sidebar -->
     <div class="cart-sidebar" id="cartSidebar" style="transform: translateX(100%);">
         <div class="cart-header">
