--- a/Tour.html
+++ b/Tour.html
@@ -16,13 +16,19 @@
 <body>
     <!-- Navbar -->
     <div class="navbar">
+        <div class="nav-logo">
+            <a href="./index.html">
+                <img src="logo1.png" alt="Stage Fright Logo" class="logo">
+            </a>
+        </div>
         <div class="nav-links">
             <a href="./index.html">Home</a>
             <a href="./Tour.html">Tour</a>
             <a href="./Merch.html">Merch</a>
             <a href="./About.html">About</a>
-            <a href="./Contact.html">Contact</a>
+            <a href="./index.html#contact-container">Contact</a>
         </div>
+        
         <div class="cart-icon" onclick="toggleCart()">
             <i class="fas fa-shopping-cart"></i>
             <span id="cartCount" class="cart-badge">0</span>
