a whole but load of new photos and new checkout

--- a/Merch.html
+++ b/Merch.html
@@ -43,42 +43,45 @@
         </div>
         <div class="cart-total">
             <p>Total: $<span id="cartTotal">0</span></p>
-            <button>Checkout</button>
+            <a href="./checkout.html">
+                <button>Checkout</button>
+            </a>
         </div>
+        
     </div>
 
     <!-- Merch Section -->
-    <section class="merch" id="merch">
-        <h2>Merchandise</h2>
-        <div class="grid">
-            <div class="item">
-                <img src="./assets/images/T-Shirt.png" alt="T-Shirt">
-                <h3>T-Shirt</h3>
-                <p>$25</p>
-                <button onclick="addToCart('Stage Fright T-shirt', 25)">Add to Cart</button>
+    <main class="merch-section">
+        <div class="container">
+            <h1>Merchandise</h1>
+            <div class="grid">
+                <div class="item">
+                    <img src="./assets/images/T-Shirt.png" alt="T-Shirt">
+                    <h3>Stage Fright T-Shirt</h3>
+                    <p>$25</p>
+                    <button onclick="addToCart('Stage Fright T-Shirt', 25)">Add to Cart</button>
+                </div>
+                <div class="item">
+                    <img src="./assets/images/Hoodie.png" alt="Hoodie">
+                    <h3>Stage Fright Hoodie</h3>
+                    <p>$40</p>
+                    <button onclick="addToCart('Hoodie', 40)">Add to Cart</button>
+                </div>
+                <div class="item">
+                    <img src="./assets/images/Poster.png" alt="Poster">
+                    <h3>Stage Fright Poster</h3>
+                    <p>$10</p>
+                    <button onclick="addToCart('Poster', 10)">Add to Cart</button>
+                </div>
+                <div class="item">
+                    <img src="./assets/images/Vinyl.png" alt="Vinyl">
+                    <h3>Stage Fright Vinyl</h3>
+                    <p>$30</p>
+                    <button onclick="addToCart('Vinyl', 30)">Add to Cart</button>
+                </div>
             </div>
-            <div class="item">
-                <img src="./assets/images/Hoodie.png" alt="Hoodie">
-                <h3>Hoodie</h3>
-                <p>$40</p>
-                <button onclick="addToCart('Hoodie', 40)">Add to Cart</button>
-            </div>
-            <div class="item">
-                <img src="./assets/images/Poster.png" alt="Hoodie">
-                <h3>Poster</h3>
-                <p>$10</p>
-                <button onclick="addToCart('Poster', 10)">Add to Cart</button>
-            </div>
-            <div class="item">
-                <img src="./assets/images/Vinyl.png" alt="Hoodie">
-                <h3>Vinyl</h3>
-                <p>$30</p>
-                <button onclick="addToCart('Vinyl', 30)">Add to Cart</button>
-            </div>
-            <!-- ADD A CD -->
-
         </div>
-    </section>
+    </main>
 
     <!-- Footer -->
     <footer>
