--- a/Tour.html
+++ b/Tour.html
@@ -35,8 +35,8 @@
         </div>
     </div>
 
-     <!-- Cart Sidebar -->
-     <div class="cart-sidebar" id="cartSidebar" style="transform: translateX(100%);">
+       <!-- Cart Sidebar -->
+    <div class="cart-sidebar" id="cartSidebar" style="transform: translateX(100%);">
         <div class="cart-header">
             <h3>Shopping Cart</h3>
             <button onclick="toggleCart()">&times;</button>
@@ -46,10 +46,12 @@
         </div>
         <div class="cart-total">
             <p>Total: $<span id="cartTotal">0</span></p>
-            <button>Checkout</button>
+            <a href="./checkout.html">
+                <button>Checkout</button>
+            </a>
         </div>
+        
     </div>
-
 
 <!-- Map -->
     <div id="tour" class="tour-section">
