--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
             <span id="cartCount" class="cart-badge">0</span>
         </div>
     </div>
-    <!-- Cart Sidebar -->
-    <div class="cart-sidebar" id="cartSidebar" style="transform: translateX(100%);">
+    <
+     <!-- Cart Sidebar -->
+     <div class="cart-sidebar" id="cartSidebar" style="transform: translateX(100%);">
         <div class="cart-header">
             <h3>Shopping Cart</h3>
             <button onclick="toggleCart()">&times;</button>
@@ -50,10 +51,12 @@
         </div>
         <div class="cart-total">
             <p>Total: $<span id="cartTotal">0</span></p>
-            <button>Checkout</button>
+            <a href="./checkout.html">
+                <button>Checkout</button>
+            </a>
         </div>
+        
     </div>
-
 
     <!-- Header Section -->
     <header class="carousel-container">
@@ -136,22 +139,7 @@
         </form>
     </div>
     
-   <!-- Contact Container -->
-   <div id="contact-container">
-    <h1>&bull; Get in Touch &bull;</h1>
-    <p>This is the contact section. Scroll here to see the side card appear.</p>
-</div>
-
-<!-- Side Contact Card -->
-<div id="side-contact-card" class="hidden">
-    <h2>Contact Us</h2>
-    <p>For bookings, inquiries, or customer support, reach out to us:</p>
-    <ul>
-        <li>Email: contact@stagefright.com</li>
-        <li>Phone: (123) 456-7890</li>
-        <li>Social Media: @StageFrightBand</li>
-    </ul>
-</div>
+  
 
 
     <!-- Footer -->
