faq and checkout

--- a/index.html
+++ b/index.html
@@ -78,17 +78,15 @@
           <div class="accordion-item">
             <h1>Frequently asked questions</h1>
             <button aria-expanded="false">
-              <span class="accordion-title">What is your name?</span>
+              <span class="accordion-title">How did the band meet?</span>
               <span class="icon"></span>
             </button>
             <div class="accordion-content">
-              <p>My name is John Doe.</p>
+              <p>The band formed in high school detention, where they began playing together and quickly bonded over music.
+                 Their shared struggles led to the creation of Stage Fright, a family united by their love for music and overcoming fears.</p>
             </div>
             
-            <button aria-expanded="false">
-                <span class="accordion-title">is your name?</span>
-                <span class="icon"></span>
-              </button>
+          
               <div class="accordion-content">
                 <p>My name is e.</p>
               </div>
@@ -127,7 +125,7 @@
             <div class="input-group">
                 <select name="subject" required>
                     <option value="" disabled selected>Subject</option>
-                    <option>Booking Inquiry</option>
+                    <option>Order Troubleshooting</option>
                     <option>Fan Feedback</option>
                     <option>Media Request</option>
                 </select>
