changed all about learn more to be the same

--- a/Merch.html
+++ b/Merch.html
@@ -53,7 +53,7 @@
     <!-- Merch Section -->
     <main class="merch-section">
         <div class="container">
-            <h1>Merchandise</h1>
+            <h1 class="pg-name">Merchandise</h1>
             <div class="grid">
                 <div class="item">
                     <img src="./assets/images/T-Shirt.png" alt="T-Shirt">
