--- a/member-profiles/Jamie.html
+++ b/member-profiles/Jamie.html
@@ -4,81 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stage Fright</title>
-    <!-- <link rel="stylesheet" href="../profiles.css"/> -->
-     <style>
-        body {
-            background-color: black;
-            /* color: white; */
-        }
+    <link rel="stylesheet" href="../profiles.css"/>
 
-        .flexbox {
-            display: flex;
-        }
-
-        img {
-            height: 200px;
-            width: 200px;
-            margin-bottom: 10px;
-        }
-
-        div > .images, .text{
-            /* background-color: rgb(237, 237, 237); */
-            /* background-color: rgb(104, 101, 101); */
-            /* background-color: rgb(117, 109, 103); */
-            background-color: rgb(186, 175, 167);
-
-
-        }
-
-        .images {
-            width: 200px;
-            padding: 20px 20px 10px 20px;
-            margin: 20px;
-        }
-
-        .text {
-            padding: 20px;
-            padding-top: 0px;
-            margin: 20px;
-            height: 660px;
-        }
-
-        span {
-            font-size: 2rem;
-            font-weight: bold;
-            /* font-style: italic; */
-        }
-
-        @media (max-width: 805px) {
-            .flexbox {
-                flex-direction: column;
-            }
-
-            img {
-                height: 100px;
-                width: 100px; 
-                margin-bottom: 0px;
-            }
-
-            .images {
-                display: flex;
-                padding: 20px 20px 15px 20px;
-                width: auto;
-                margin: auto;
-            }
-
-            .row {
-                flex: 33.33%;
-                padding: 5px;
-            }
-
-            .text {
-                height: auto;
-            }
-        }
-
-
-     </style>
 
 </head>
 <body>
