--- a/member-profiles/Morgan.html
+++ b/member-profiles/Morgan.html
@@ -4,80 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stage Fright</title>
-    <!-- <link rel="stylesheet" href="../profiles.css"/> -->
+    <link rel="stylesheet" href="../profiles.css"/>
 
-    <style>
-        .flexbox {
-            display: flex;
-        }
-
-        img {
-            height: 200px;
-            width: 200px;
-            margin-bottom: 10px;
-        }
-
-        div > .images, .text{
-            background-color: rgb(237, 237, 237);
-        }
-
-        .images {
-            width: 200px;
-            padding: 20px 20px 10px 20px;
-            margin: 20px;
-        }
-
-        .text {
-            padding: 20px;
-            padding-top: 0px;
-            margin: 20px;
-            height: 660px;
-        }
-
-        span {
-            font-size: 2rem;
-            font-weight: bold;
-            /* font-style: italic; */
-        }
-
-        @media (max-width: 1010px) {
-            .flexbox {
-                flex-direction: column;
-            }
-
-            img {
-                height: 100px;
-                width: 100px; 
-                margin-bottom: 0px;
-            }
-
-            .images {
-                display: flex;
-                padding: 20px 20px 15px 20px;
-                width: auto;
-                margin: auto;
-            }
-
-            .row {
-                flex: 33.33%;
-                padding: 5px;
-            }
-
-            .text {
-                height: auto;
-            }
-        }
-
-
-     </style>
 
 </head>
 <body>
     <div class="flexbox">
         <div class="images">
-            <div class="row">    <img src="../assets/images/members/Morgan 1.jpg" alt="Morgan listening to music in his room"/>            </div>
-            <div class="row">    <img src="../assets/images/members/Morgan 2.jpg" alt="Morgan mowing the lawn"/>            </div>
-            <div class="row">    <img src="../assets/images/members/Morgan 3.jpg" alt="Morgan playing drums in his garage"/>            </div>
+            <div class="row"><img src="../assets/images/members/Morgan 1.jpg" alt="Morgan listening to music in his room"/></div>
+            <div class="row"><img src="../assets/images/members/Morgan 2.jpg" alt="Morgan mowing the lawn"/></div>
+            <div class="row"><img src="../assets/images/members/Morgan 3.jpg" alt="Morgan playing drums in his garage"/></div>
         </div>
 
         <div class="text">
