--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
             <a href="./Tour.html">Buy Tickets</a>
         </div>
     </header>
+<!-- Band Blurb Section -->
+<div class="band-blurb">
+    <h2>Meet Stage Fright</h2>
+    <p>Stage Fright isn't just a band; we're a family bound by music, passion, and a little bit of chaos. From the high school detention halls to the biggest stages, we’re here to make you feel every beat and every note. Join us on this wild ride, and let's make some unforgettable memories together!</p>
+</div>
 
     <div class="faq">
         <div class="accordion">
@@ -136,7 +141,19 @@
             <button type="submit" id="submit-button">Send</button>
         </form>
     </div>
-    
+ 
+   
+    <div id="side-contact-card" class="hidden">
+        <h2>Contact Us</h2>
+        <p>For bookings, inquiries, or customer support, reach out to us:</p>
+        <ul>
+            <li>Email: contact@stagefright.com</li>
+            <li>Phone: (123) 456-7890</li>
+            <li>Social Media: @StageFrightBand</li>
+        </ul>
+        <button id="close-card">Close</button>
+    </div>
+
   
 
 
