--- a/Contact.html
+++ b/Contact.html
@@ -1,57 +1,199 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stage Fright</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+    <title>Contact Us</title>
+    <style>
+        /* General Styling */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #000;
+            color: #fff;
+        }
 
-    <link rel="stylesheet" href="./style.css"/>
+        h1, h2 {
+            text-align: center;
+            color: #ff6a3d;
+        }
 
+        a {
+            color: #ff6a3d;
+            text-decoration: none;
+        }
+
+        .hidden {
+            display: none;
+        }
+
+        /* Contact Form Styling */
+        #contact-container {
+            width: 90%;
+            max-width: 600px;
+            margin: 50px auto;
+            background: #1a1a1a;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+        }
+
+        #contact-container h1 {
+            margin-bottom: 10px;
+        }
+
+        .underline {
+            width: 80px;
+            height: 4px;
+            background-color: #ff6a3d;
+            margin: 0 auto 20px;
+        }
+
+        .input-group {
+            margin-bottom: 15px;
+        }
+
+        .input-group input,
+        .input-group select,
+        .input-group textarea {
+            width: 100%;
+            padding: 10px;
+            background: #333;
+            border: 1px solid #555;
+            color: #fff;
+            border-radius: 4px;
+        }
+
+        #submit-button {
+            width: 100%;
+            padding: 10px;
+            background-color: #ff6a3d;
+            border: none;
+            color: #fff;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 4px;
+            transition: background 0.3s;
+        }
+
+        #submit-button:hover {
+            background-color: #e6592b;
+        }
+
+        /* Side Contact Card Styling */
+        #side-contact-card {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background: #1a1a1a;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+            max-width: 300px;
+        }
+
+        #side-contact-card ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        #side-contact-card li {
+            margin-bottom: 10px;
+        }
+
+        #side-contact-card button {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            background-color: #ff6a3d;
+            border: none;
+            color: #fff;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 4px;
+            margin-top: 10px;
+        }
+
+        #side-contact-card button:hover {
+            background-color: #e6592b;
+        }
+    </style>
 </head>
-
 <body>
-    <!-- Navbar -->
-    <div class="navbar">
-        <div class="nav-links">
-            <a href="./index.html">Home</a>
-            <a href="./Tour.html">Tour</a>
-            <a href="./Merch.html">Merch</a>
-            <a href="./About.html">About</a>
-            <a href="./Contact.html">Contact</a>
-        </div>
-        <div class="cart-icon" onclick="toggleCart()">
-            <i class="fas fa-shopping-cart"></i>
-            <span id="cartCount" class="cart-badge">0</span>
-        </div>
+
+    <!-- Contact Form Section -->
+    <div id="contact-container">
+        <h1>&bull; Get in Touch &bull;</h1>
+        <div class="underline"></div>
+        <form action="#" method="post" id="contact-form">
+            <div class="input-group">
+                <input type="text" placeholder="Name" name="name" required>
+            </div>
+            <div class="input-group">
+                <input type="email" placeholder="Email" name="email" required>
+            </div>
+            <div class="input-group">
+                <input type="text" placeholder="Phone" name="telephone" required>
+            </div>
+            <div class="input-group">
+                <select name="subject" required>
+                    <option value="" disabled selected>Subject</option>
+                    <option>Order Troubleshooting</option>
+                    <option>Fan Feedback</option>
+                    <option>Media Request</option>
+                </select>
+            </div>
+            <div class="input-group">
+                <textarea name="message" placeholder="Message" rows="4" required></textarea>
+            </div>
+            <button type="submit" id="submit-button">Send</button>
+        </form>
     </div>
 
-    <!-- Cart Sidebar -->
-    <div class="cart-sidebar" id="cartSidebar">
-        <div class="cart-header">
-            <h3>Shopping Cart</h3>
-            <button onclick="toggleCart()">&times;</button>
-        </div>
-        <div class="cart-items" id="cartItems">
-            <!-- Items will be dynamically added here -->
-        </div>
-        <div class="cart-total">
-            <p>Total: $<span id="cartTotal">0</span></p>
-            <button>Checkout</button>
-        </div>
+    <!-- Side Contact Card -->
+    <div id="side-contact-card" class="hidden">
+        <h2>Contact Us</h2>
+        <p>For bookings, inquiries, or customer support, reach out to us:</p>
+        <ul>
+            <li>Email: contact@stagefright.com</li>
+            <li>Phone: (123) 456-7890</li>
+            <li>Social Media: @StageFrightBand</li>
+        </ul>
+        <button id="close-card">Close</button>
     </div>
 
-  
-    <h2>Contact Us</h2>
-    <p>For bookings, inquires, or customer support, reach out to us:</p>
-    <ul>
-        <li>Email: contact@stagefright.com</li>
-        <li>Phone: (123) 456-7890</li>
-        <li>Social Media: @StageFrightBand</li>
-    </ul>
+    <!-- JavaScript for Interaction -->
+    <script>
+        // Toggling the visibility of the side contact card
+        const sideCard = document.getElementById('side-contact-card');
+        const toggleButton = document.createElement('button');
+
+        toggleButton.textContent = 'Contact Us';
+        toggleButton.style.position = 'fixed';
+        toggleButton.style.bottom = '20px';
+        toggleButton.style.right = '20px';
+        toggleButton.style.background = '#ff6a3d';
+        toggleButton.style.color = '#fff';
+        toggleButton.style.padding = '10px 20px';
+        toggleButton.style.border = 'none';
+        toggleButton.style.borderRadius = '4px';
+        toggleButton.style.cursor = 'pointer';
+        toggleButton.style.boxShadow = '0 4px 10px rgba(0, 0, 0, 0.5)';
+
+        document.body.appendChild(toggleButton);
+
+        toggleButton.addEventListener('click', () => {
+            sideCard.classList.toggle('hidden');
+        });
+
+        document.getElementById('close-card').addEventListener('click', () => {
+            sideCard.classList.add('hidden');
+        });
+    </script>
+
+</body>
+</html>
 
 
 
