--- a/Contact.html
+++ b/Contact.html
@@ -1,217 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
-    <style>
-        /* General Styling */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #000;
-            color: #fff;
-        }
-
-        h1, h2 {
-            text-align: center;
-            color: #ff6a3d;
-        }
-
-        a {
-            color: #ff6a3d;
-            text-decoration: none;
-        }
-
-        .hidden {
-            display: none;
-        }
-
-        /* Contact Form Styling */
-        #contact-container {
-            width: 90%;
-            max-width: 600px;
-            margin: 50px auto;
-            background: #1a1a1a;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-        }
-
-        #contact-container h1 {
-            margin-bottom: 10px;
-        }
-
-        .underline {
-            width: 80px;
-            height: 4px;
-            background-color: #ff6a3d;
-            margin: 0 auto 20px;
-        }
-
-        .input-group {
-            margin-bottom: 15px;
-        }
-
-        .input-group input,
-        .input-group select,
-        .input-group textarea {
-            width: 100%;
-            padding: 10px;
-            background: #333;
-            border: 1px solid #555;
-            color: #fff;
-            border-radius: 4px;
-        }
-
-        #submit-button {
-            width: 100%;
-            padding: 10px;
-            background-color: #ff6a3d;
-            border: none;
-            color: #fff;
-            font-size: 16px;
-            cursor: pointer;
-            border-radius: 4px;
-            transition: background 0.3s;
-        }
-
-        #submit-button:hover {
-            background-color: #e6592b;
-        }
-
-        /* Side Contact Card Styling */
-        #side-contact-card {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background: #1a1a1a;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-            max-width: 300px;
-        }
-
-        #side-contact-card ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        #side-contact-card li {
-            margin-bottom: 10px;
-        }
-
-        #side-contact-card button {
-            display: block;
-            width: 100%;
-            padding: 10px;
-            background-color: #ff6a3d;
-            border: none;
-            color: #fff;
-            font-size: 16px;
-            cursor: pointer;
-            border-radius: 4px;
-            margin-top: 10px;
-        }
-
-        #side-contact-card button:hover {
-            background-color: #e6592b;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Card</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background-color: #121212; /* Dark background */
+    }
+    .contact-card {
+      position: relative;
+      width: 300px;
+      padding: 15px;
+      border-radius: 8px;
+      background-color: #ff6a3d; /* Highlight color */
+      color: white;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+    .close-btn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      width: 25px;
+      height: 25px;
+      background-color: #ff3d3d;
+      color: white;
+      border: none;
+      border-radius: 50%;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    .close-btn:hover {
+      background-color: #ff1a1a;
+    }
+  </style>
 </head>
 <body>
+  <div class="contact-card" id="contactCard">
+    <button class="close-btn" onclick="closeCard()">×</button>
+    <h3>Contact Us</h3>
+    <p>Email: info@example.com</p>
+    <p>Phone: (123) 456-7890</p>
+  </div>
 
-    <!-- Contact Form Section -->
-    <div id="contact-container">
-        <h1>&bull; Get in Touch &bull;</h1>
-        <div class="underline"></div>
-        <form action="#" method="post" id="contact-form">
-            <div class="input-group">
-                <input type="text" placeholder="Name" name="name" required>
-            </div>
-            <div class="input-group">
-                <input type="email" placeholder="Email" name="email" required>
-            </div>
-            <div class="input-group">
-                <input type="text" placeholder="Phone" name="telephone" required>
-            </div>
-            <div class="input-group">
-                <select name="subject" required>
-                    <option value="" disabled selected>Subject</option>
-                    <option>Order Troubleshooting</option>
-                    <option>Fan Feedback</option>
-                    <option>Media Request</option>
-                </select>
-            </div>
-            <div class="input-group">
-                <textarea name="message" placeholder="Message" rows="4" required></textarea>
-            </div>
-            <button type="submit" id="submit-button">Send</button>
-        </form>
-    </div>
-
-    <!-- Side Contact Card -->
-    <div id="side-contact-card" class="hidden">
-        <h2>Contact Us</h2>
-        <p>For bookings, inquiries, or customer support, reach out to us:</p>
-        <ul>
-            <li>Email: contact@stagefright.com</li>
-            <li>Phone: (123) 456-7890</li>
-            <li>Social Media: @StageFrightBand</li>
-        </ul>
-        <button id="close-card">Close</button>
-    </div>
-
-    <!-- JavaScript for Interaction -->
-    <script>
-        // Toggling the visibility of the side contact card
-        const sideCard = document.getElementById('side-contact-card');
-        const toggleButton = document.createElement('button');
-
-        toggleButton.textContent = 'Contact Us';
-        toggleButton.style.position = 'fixed';
-        toggleButton.style.bottom = '20px';
-        toggleButton.style.right = '20px';
-        toggleButton.style.background = '#ff6a3d';
-        toggleButton.style.color = '#fff';
-        toggleButton.style.padding = '10px 20px';
-        toggleButton.style.border = 'none';
-        toggleButton.style.borderRadius = '4px';
-        toggleButton.style.cursor = 'pointer';
-        toggleButton.style.boxShadow = '0 4px 10px rgba(0, 0, 0, 0.5)';
-
-        document.body.appendChild(toggleButton);
-
-        toggleButton.addEventListener('click', () => {
-            sideCard.classList.toggle('hidden');
-        });
-
-        document.getElementById('close-card').addEventListener('click', () => {
-            sideCard.classList.add('hidden');
-        });
-    </script>
-
+  <script>
+    function closeCard() {
+      document.getElementById('contactCard').style.display = 'none';
+    }
+  </script>
 </body>
-</html>
-
-
-
-
-
-
-
-
-    
-
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2025 Stage Fright. All rights reserved.</p>
-    </footer>
-
-    <script src="script.js"></script>
-
-
-</body>
-
 </html>
