--- a/checkout.html
+++ b/checkout.html
@@ -354,7 +354,7 @@
 
       cartTotalElement.innerText = total.toFixed(2);
     }
-
+hi can u see this
     function removeFromCart(index) {
       cartItems.splice(index, 1);
       localStorage.setItem('cart', JSON.stringify(cartItems));
