added more tours

--- a/Tour.html
+++ b/Tour.html
@@ -65,7 +65,17 @@
             <option value="Canada">Canada</option>
             <option value="Germany">Germany</option>
             <option value="France">France</option>
+            <option value="Italy">Italy</option>
+            <option value="Japan">Japan</option>
+            <option value="Brazil">Brazil</option>
+            <option value="South Africa">South Africa</option>
+            <option value="Spain">Spain</option>
+            <option value="India">India</option>
+            <option value="Mexico">Mexico</option>
+            <option value="Russia">Russia</option>
+            <option value="China">China</option>
         </select>
+        
         <div id="showList"></div>
 
         <div id="tourMap" class="map-container"></div>
