adjusted about pg

--- a/About.html
+++ b/About.html
@@ -53,28 +53,28 @@
                     <img src="./assets/images/singer.jpg" alt="Alex Turner the Lead Vocal">
                     <h3>Alex Turner</h3>
                     <p class="role">Lead Vocal</p>
-                    <p>Alex Turner, the lead vocalist and lyricist of Stage Fright, is a shy yet charismatic figure. He often...</p>
+                    <p>Alex Turner is a shy yet charismatic figure. He has a distinct, almost haunting voice that could go from fragile and delicate to fiery and intense.</p>
                     <a href="./member-profiles/Alex.html"><button class="about-button">Learn More</button></a>
                 </div>
                 <div class="item">
                     <img src="./assets/images/guitarist.png" alt="Jamie Smith the guitarist">
                     <h3>Jamie Smith</h3>
                     <p class="role">Guitarist</p>
-                    <p>...</p>
+                    <p>Jamie Smith discovered his father's guitar hidden in a closet at the age of 12. He gained a distinct ability to make his guitar sing, capturing emotions in his playing that words couldn’t express.</p>
                     <a href="./member-profiles/Jamie.html"><button class="about-button">Learn More</button></a>
                 </div>
                 <div class="item">
                     <img src="./assets/images/bassist.png" alt="Taylor Green the Bassist">
                     <h3>Taylor Green</h3>
                     <p class="role">Bassist</p>
-                    <p>...</p>
+                    <p>Taylor Green is the quiet force that anchors the band's sound. He provides the groove and the grounding with his calm but confident bass sound.</p>
                     <a href="./member-profiles/Taylor.html"><button class="about-button">Learn More</button></a>
                 </div>
                 <div class="item">
                     <img src="./assets/images/drummer.png" alt="Morgan Lee the Drummer">
                     <h3>Morgan Lee</h3>
                     <p class="role">Drummer</p>
-                    <p>..</p>
+                    <p>Morgan Lee is the rhythmic heartbeat of the band. When he was 14, he picked up his first drum kit. To him, it wasn’t about perfection; it was about feeling the rhythm, the power, and the release of the drums.</p>
                     <a href="./member-profiles/Morgan.html"><button class="about-button">Learn More</button></a>
                 </div>
             </div>
