organized all files and assets

--- a/Merch.html
+++ b/Merch.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <div class="navbar">
         <div class="nav-logo">
             <a href="./index.html">
-                <img src="logo1.png" alt="Stage Fright Logo" class="logo">
+                <img src="assets/images/logo1.png" alt="Stage Fright Logo" class="logo">
             </a>
         </div>
         <div class="nav-links">
@@ -69,7 +69,7 @@
             <div class="grid">
                 <!-- Merch Items -->
                 <div class="item clothing">
-                    <img src="./assets/images/T-Shirt.png" alt="T-Shirt">
+                    <img src="./assets/images/merch/T-Shirt.png" alt="T-Shirt">
                     <h3>Stage Fright T-Shirt</h3>
                     <p>$25</p>
                     <select class="size-select">
@@ -81,7 +81,7 @@
                     <button onclick="addToCart('Stage Fright T-Shirt', 25)">Add to Cart</button>
                 </div>
                 <div class="item clothing">
-                    <img src="./assets/images/hoodie2.jpeg" alt="T-Shirt">
+                    <img src="./assets/images/merch/hoodie2.jpeg" alt="T-Shirt">
                     <h3>Stage Fright Hoodie</h3>
                     <p>$35</p>
                     <select class="size-select">
@@ -93,7 +93,7 @@
                     <button onclick="addToCart('Stage Fright T-Shirt', 35)">Add to Cart</button>
                 </div>
                 <div class="item sold-out clothing">
-                    <img src="./assets/images/Hoodie.png" alt="Hoodie">
+                    <img src="./assets/images/merch/Hoodie.png" alt="Hoodie">
                     <h3>Stage Fright Hoodie</h3>
                     <p>$40</p>
                     <select class="size-select">
@@ -106,50 +106,50 @@
                     <button disabled>Sold Out</button>
                 </div>
                 <div class="item miscellaneous">
-                    <img src="./assets/images/Stickers.jpeg" alt="Stickers">
+                    <img src="./assets/images/merch/Stickers.jpeg" alt="Stickers">
                     <h3>Stage Fright Stickers</h3>
                     <p>$5</p>
                     <button onclick="addToCart('Stage Fright Stickers', 5)">Add to Cart</button>
                 </div>
                 <div class="item albums">
-                    <img src="./assets/images/Vinyl.png" alt="Vinyl">
+                    <img src="./assets/images/merch/Vinyl.png" alt="Vinyl">
                     <h3>Debut Vinyl</h3>
                     <p>$30</p>
                     <button onclick="addToCart('Debut Vinyl', 30)">Add to Cart</button>
                 </div>
                 <div class="item albums">
-                    <img src="./assets/images/ablum2.jpeg" alt="Vinyl">
+                    <img src="./assets/images/merch/RiseFromTheAshesAlbum.jpeg" alt="Vinyl">
                     <h3>Rise from the ashes Vinyl</h3>
                     <p>$30</p>
                     <button onclick="addToCart('Debut Vinyl', 30)">Add to Cart</button>
                 </div>
                 <div class="item albums">
-                    <img src="./assets/images/album.webp" alt="Vinyl">
+                    <img src="./assets/images/merch/EchoesOfTheStageAlbum.webp" alt="Vinyl">
                     <h3>Echoes of the Stage Vinyl</h3>
                     <p>$30</p>
                     <button onclick="addToCart('Echoes of the Stage Vinyl', 30)">Add to Cart</button>
                 </div>
                 <div class="item miscellaneous">
-                    <img src="./assets/images/cup.jpeg" alt="Mug">
+                    <img src="./assets/images/merch/cup.jpeg" alt="Mug">
                     <h3>Stage Fright Mug</h3>
                     <p>$12</p>
                     <button onclick="addToCart('Stage Fright Mug', 12)">Add to Cart</button>
                 </div>
                 <div class="item miscellaneous">
-                    <img src="./assets/images/cup2.jpeg" alt="Mug">
+                    <img src="./assets/images/merch/cup2.jpeg" alt="Mug">
                     <h3>Stage Fright Mug</h3>
                     <p>$12</p>
                     <button onclick="addToCart('Stage Fright Mug', 12)">Add to Cart</button>
                 </div>
                 <div class="item clothing">
-                    <img src="./assets/images/cap.jpeg" alt="T-Shirt">
+                    <img src="./assets/images/merch/cap.jpeg" alt="T-Shirt">
                     <h3>Stage Fright T-Shirt</h3>
                     <p>$25</p>
                     <button onclick="addToCart('Stage Fright T-Shirt', 25)">Add to Cart</button>
                 </div>
                 
                 <div class="item sold-out clothing">
-                    <img src="./assets/images/shirt2.jpeg" alt="T-Shirt">
+                    <img src="./assets/images/merch/shirt2.jpeg" alt="T-Shirt">
                     <h3>Stage Fright T-Shirt</h3>
                     <p>$25</p>
                     <select class="size-select">
