--- a/Tour.html
+++ b/Tour.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 
-    <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href="./css/style.css"/>
 
 </head>
 
@@ -18,7 +18,7 @@
     <div class="navbar">
         <div class="nav-logo">
             <a href="./index.html">
-                <img src="logo1.png" alt="Stage Fright Logo" class="logo">
+                <img src="assets/images/logo1.png" alt="Stage Fright Logo" class="logo">
             </a>
         </div>
         <div class="nav-links">
