--- a/checkout.html
+++ b/checkout.html
@@ -258,7 +258,7 @@
   <div class="navbar">
     <div class="nav-logo">
         <a href="./index.html">
-            <img src="logo1.png" alt="Stage Fright Logo" class="logo">
+            <img src="assets/images/logo1.png" alt="Stage Fright Logo" class="logo">
         </a>
     </div>
     <div class="nav-links">
@@ -354,7 +354,7 @@
 
       cartTotalElement.innerText = total.toFixed(2);
     }
-hi can u see this
+
     function removeFromCart(index) {
       cartItems.splice(index, 1);
       localStorage.setItem('cart', JSON.stringify(cartItems));
