--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
-    <link rel="stylesheet" href="./style.css"/>
-    <link rel="stylesheet" href="../ccard.css"/>
+    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="stylesheet" href="./css/contactCard.css"/>
 </head>
 
 <body style="background-image: url('back.webp'); background-size: cover; background-position: center;">
@@ -18,7 +18,7 @@
     <div class="navbar">
         <div class="nav-logo">
             <a href="./index.html">
-                <img src="logo1.png" alt="Stage Fright Logo" class="logo">
+                <img src="./assets/images/logo1.png" alt="Stage Fright Logo" class="logo">
             </a>
         </div>
         <div class="nav-links">
@@ -99,7 +99,7 @@
     
     <!-- Embedded Video -->
     <div class="video-container">
-        <iframe width="560" height="315" src="crowd.mp4" 
+        <iframe width="560" height="315" src="assets/crowd.mp4" 
                 title="Stage Fright Tour Promo Video" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
