--- a/member-profiles/Morgan.html
+++ b/member-profiles/Morgan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stage Fright</title>
-    <link rel="stylesheet" href="../profiles.css"/>
+    <link rel="stylesheet" href="../css/profiles.css"/>
 
 
 </head>
