--- a/Merch.html
+++ b/Merch.html
@@ -9,14 +9,88 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <link rel="stylesheet" href="./css/style.css" />
+    <script src="script.js"></script>
 </head>
 
 <body>
+ 
+ <!-- Accessibility Bubble -->
+ <div
+ class="accessibility-bubble"
+ onclick="toggleAccessibilityToolbar()"
+ aria-label="Open Accessibility Toolbar"
+ role="button"
+ tabindex="0"
+>
+ <i class="fas fa-universal-access"></i>
+</div>
+
+<!-- Accessibility Toolbar -->
+<div
+ class="accessibility-toolbar"
+ id="accessibilityToolbar"
+ aria-label="Accessibility Toolbar"
+ style="display: none;"
+>
+ <div class="toolbar-header">
+     <h3>Accessibility Tools</h3>
+     <button class="close-button" onclick="toggleAccessibilityToolbar()" aria-label="Close Accessibility Toolbar">
+         ✕
+     </button>
+ </div>
+
+ <div class="toolbar-options">
+     <!-- Text Resizing -->
+     <div>
+         <label for="textResize">Text Size:</label>
+         <div class="text-resize-wrapper">
+             <input
+                 type="range"
+                 id="textResize"
+                 min="1"
+                 max="5"
+                 step="1"
+                 value="3"
+                 onchange="adjustTextSize(this.value)"
+                 aria-label="Adjust Text Size"
+             />
+             <span id="textResizeLabel">Normal</span>
+         </div>
+     </div>
+
+     <!-- Font Customization -->
+   
+     <!-- High Contrast Mode -->
+     <div>
+         <button onclick="toggleHighContrast()" aria-label="Toggle High Contrast Mode">
+             High Contrast
+         </button>
+     </div>
+
+     <!-- Grayscale Mode -->
+     <div>
+         <button onclick="toggleGrayscale()" aria-label="Toggle Grayscale Mode">
+             Grayscale
+         </button>
+     </div>
+
+     
+
+     <!-- Reset Settings -->
+     <div>
+         <button onclick="resetAccessibility()" aria-label="Reset Accessibility Settings">
+             Reset
+         </button>
+     </div>
+ </div>
+</div>
+
     <!-- Navbar -->
     <div class="navbar">
         <div class="nav-logo">
             <a href="./index.html">
                 <img src="assets/images/logo1.png" alt="Stage Fright Logo" class="logo">
+                <script src="script.js"></script>
             </a>
         </div>
         <div class="nav-links">
@@ -49,6 +123,7 @@
             </a>
         </div>
     </div>
+      
 
     <!-- Merch Section -->
     <main class="merch-section">
@@ -169,6 +244,7 @@
     <!-- Footer -->
     <footer>
         <p>&copy; 2025 Stage Fright. All rights reserved.</p>
+        <script src="script.js"></script>
     </footer>
 
     <script>
