--- a/Tour.html
+++ b/Tour.html
@@ -120,7 +120,7 @@
 <!-- Map -->
     <div id="tour" class="tour-section">
     <div class="tour-container">
-        <h2>Upcoming Tour Dates</h2>
+        <h2 class="pg-name">Upcoming Tour Dates</h2>
         <select id="countryDropdown">
             <option value="">Select Country</option>
             <option value="USA">USA</option>
