--- a/index.html
+++ b/index.html
@@ -134,24 +134,41 @@ style="display: none;"
               <p>The band formed in high school detention, where they began playing together and quickly bonded over music.
                  Their shared struggles led to the creation of Stage Fright, a family united by their love for music and overcoming fears.</p>
             </div>
-            
-          
-              <div class="accordion-content">
-                <p>My name is e.</p>
-              </div>
-              <button aria-expanded="false">
-                <span class="accordion-title">is your name?</span>
+            <button aria-expanded="false">
+                <span class="accordion-title">Where can I find my tickets?</span>
                 <span class="icon"></span>
               </button>
               <div class="accordion-content">
-                <p>My name is e.</p>
+                <p>After buying the tickets, you will get a confirmation email, in the email provided during checkout, with your ticket and concert information.</p>
               </div>
               <button aria-expanded="false">
-                <span class="accordion-title">is your name?</span>
+                <span class="accordion-title">Are there any age restrictions for the concert?</span>
                 <span class="icon"></span>
               </button>
               <div class="accordion-content">
-                <p>My name is e.</p>
+                <p>Unfortunately, children under 3 will not be allowed into the venue. Those under 16 must be accompanied by an adult aged 18+.</p>
+              </div>
+
+              <button aria-expanded="false">
+                <span class="accordion-title">In which countries is merch available for shipping?</span>
+                <span class="icon"></span>
+              </button>
+              <div class="accordion-content">
+                <p>Shipping is only available in the United States. Thank you for your understanding.</p>
+              </div>
+              <button aria-expanded="false">
+                <span class="accordion-title">What is the merch refund and return policy?</span>
+                <span class="icon"></span>
+              </button>
+              <div class="accordion-content">
+                <p>All product sales are final upon shipment. Once an order has been shipped, we are unable to cancel or make any changes to your order. If your order has not yet been fulfilled, please contact us via our <a href=#contact-container>Contact Page</a> and our team will be in touch.</p>
+              </div>
+              <button aria-expanded="false">
+                <span class="accordion-title">What if I get a damaged product or the wrong order?</span>
+                <span class="icon"></span>
+              </button>
+              <div class="accordion-content">
+                <p>If your order is damaged or you received a faulty product, you are eligible for either a refund or re-shipment of your product. All requests must be made within 30 days of delivery.</p>
               </div>
           </div>
         </div>
