--- a/index.html
+++ b/index.html
@@ -170,6 +170,13 @@ style="display: none;"
               <div class="accordion-content">
                 <p>If your order is damaged or you received a faulty product, you are eligible for either a refund or re-shipment of your product. All requests must be made within 30 days of delivery.</p>
               </div>
+              <button aria-expanded="false">
+                <span class="accordion-title">Who do I contact for website troubleshooting</span>
+                <span class="icon"></span>
+              </button>
+              <div class="accordion-content">
+                <p>For website troubleshooting related to the Stage Fright rock band website, please contact the development team: Kezia Sunil and Nuzhat Nabi. This website is managed under Chapter 02-0807, Hebron High School, based in Lewisville, Texas, in the year 2025.</p>
+              </div>
           </div>
         </div>
       </div>
