--- a/Tour.html
+++ b/Tour.html
@@ -150,6 +150,15 @@
 
 
         </div>
+        <div class="thank-you-section">
+            <img src="assets/images/thankyou.webp" alt="Stage Fright Thank You" class="thank-you-photo">
+            <div class="thank-you-message">
+                <h3>Thank You for Making This Possible!</h3>
+                <p>We couldn't do this without your love and support. You make every show unforgettable, and we can't wait to see you on tour!</p>
+                <p><strong>We love you all!</strong> ❤️</p>
+            </div>
+        </div>
+        
     </section>
 
     <!-- Footer -->
