--- a/Tour.html
+++ b/Tour.html
@@ -156,6 +156,7 @@
                 <h3>Thank You for Making This Possible!</h3>
                 <p>We couldn't do this without your love and support. You make every show unforgettable, and we can't wait to see you on tour!</p>
                 <p><strong>We love you all!</strong> ❤️</p>
+                <button class="send-love-button" onclick="sendLove()">Send Love</button>
             </div>
         </div>
         
