fixed tiny errors

--- a/Merch.html
+++ b/Merch.html
@@ -215,7 +215,7 @@
                 
                 <div class="item clothing">
                     <img src="./assets/images/merch/cap.jpeg" alt="T-Shirt">
-                    <h3>Stage Fright T-Shirt</h3>
+                    <h3>Stage Fright Cap</h3>
                     <p>$25</p>
                     <button onclick="addToCart('Stage Fright T-Shirt', 25, './assets/images/merch/cap.jpeg')">Add to Cart</button>
                 </div>
