--- a/About.html
+++ b/About.html
@@ -132,7 +132,7 @@
                     <h3>Taylor Green</h3>
                     <p class="role">Bassist</p>
                     <p>Taylor Green is the quiet force that anchors the band's sound. He provides the groove and the grounding with his calm but confident bass sound.</p>
-                    <a href="./member-profiles/members/Taylor.html"><button class="about-button">Learn More</button></a>
+                    <a href="./member-profiles/Taylor.html"><button class="about-button">Learn More</button></a>
                 </div>
                 <div class="item">
                     <img src="./assets/images/members/drummer.png" alt="Morgan Lee the Drummer">
