fixed faq error

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ style="display: none;"
                 <p>If your order is damaged or you received a faulty product, you are eligible for either a refund or re-shipment of your product. All requests must be made within 30 days of delivery.</p>
               </div>
               <button aria-expanded="false">
-                <span class="accordion-title">Who do I contact for website troubleshooting</span>
+                <span class="accordion-title">Who do I contact for website troubleshooting?</span>
                 <span class="icon"></span>
               </button>
               <div class="accordion-content">
